kernel/tests/snapshots/abi_snapshot__log_header_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: "LogHeader::current()"
---
{
  "magic": [
    84,
    65,
    85,
    0
  ],
  "abi": 2
}
