kernel/tests/snapshots/abi_snapshot__msg_notice_from_harness_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: msg
---
{
  "abi": 2,
  "seq": 0,
  "from": {
    "kind": "harness"
  },
  "corr": null,
  "kind": "notice",
  "consumed": null,
  "payload": "0000000000000000000000000000000000000000000000000000000000000000"
}
