kernel/tests/snapshots/abi_snapshot__msg_notice_from_hook_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: msg
---
{
  "abi": 2,
  "seq": 89,
  "from": {
    "kind": "hook",
    "id": 3
  },
  "corr": null,
  "kind": "notice",
  "consumed": null,
  "payload": "4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a4a"
}
