kernel/tests/snapshots/abi_snapshot__msg_reply_from_kernel_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: msg
---
{
  "abi": 3,
  "seq": 41,
  "from": {
    "kind": "kernel"
  },
  "corr": 7,
  "kind": "reply",
  "consumed": {
    "tokens": 8000,
    "cost_microusd": 50000
  },
  "payload": "0000000000000000000000000000000000000000000000000000000000000000"
}
