kernel/tests/snapshots/abi_snapshot__msg_request_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: msg
---
{
  "abi": 2,
  "seq": 42,
  "from": {
    "kind": "agent",
    "id": 7
  },
  "corr": 1001,
  "kind": "request",
  "consumed": null,
  "payload": "abababababababababababababababababababababababababababababababab"
}
