kernel/tests/snapshots/abi_snapshot__snapshot_header_wire_format.snap
---
source: kernel/tests/abi_snapshot.rs
expression: snapshot_header()
---
{
  "magic": [
    84,
    65,
    85,
    83
  ],
  "abi": 2,
  "fold": 1,
  "seq": 5017,
  "prefix": "1111111111111111111111111111111111111111111111111111111111111111",
  "state": "2222222222222222222222222222222222222222222222222222222222222222"
}
